<resources>
    <string name="facebook_app_id">255642823428638</string>
    <string name="fb_login_protocol_scheme">fb255642823428638</string>
    <string name="facebook_client_token">a07d69b4b34ad773ccf6126648037c40</string>
    <string name="app_name">Provider</string>
    <string name="roots_care">Roots Care</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_data">No data found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="read_more"><u>Read More</u></string>
    <string name="read_less"><u>Read Less</u></string>
    <string name="can_not_be_blank">Can not be blank</string>
    <string name="submit">Submit</string>
    <string name="select_time">Select Time</string>
    <string name="please_select_day">Please select day</string>
    <string name="please_add_time_for_all_slot">Please add time for all slot</string>
    <string name="choose_name_for_this_file">Choose name for the file</string>
    <string name="create_prescription_name">Enter prescription number</string>
    <string name="transition_string">transition_name</string>
    <string name="my_profile">My profile</string>
    <string name="review_and_rating">Review &amp; rating</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="my_appointment">My Appointment</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="today_appointment">Today\'s Appointment</string>
    <string name="new_appointment">New Appointment</string>
    <string name="appointment_history">Appointment History</string>
    <string name="my_schedule">My Schedule</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="add_schedule">Add Your Schedule</string>
    <string name="payment_history">Payment History</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="price_list">Price List</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="complete">Complete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="network_unavailable">Please Check Your Network Connection</string>
    <string name="server_alert">Some server problem has been encountered</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="okay">OK</string>
    <string name="agree">Agree</string>
    <string name="do_not_agree">Don\'t Agree</string>
    <string name="terms_agree">I Agree</string>
    <string name="camera_cancel">Cancel</string>
    <string name="heading_video_call">Video Consultation</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string-array name="time_array">
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item> 01:00 AM</item>
        <item>01:30 AM</item>
        <item>02:00 AM</item>
        <item> 02:30 AM</item>
        <item> 03:00 AM</item>
        <item> 03:30 AM</item>
        <item> 04:00 AM</item>
        <item> 04:30 AM</item>
        <item>05:00 AM</item>
        <item>05:30 AM</item>
        <item> 06:00 AM</item>
        <item> 06:30 AM</item>
        <item> 07:00 AM</item>
        <item> 07:30 AM</item>
        <item> 08:00 AM</item>
        <item> 08:30 AM</item>
        <item> 09:00 AM</item>
        <item> 09:30 AM</item>
        <item> 10:00 AM</item>
        <item> 10:30 AM</item>
        <item> 11:00 AM</item>
        <item> 11:30 AM</item>
        <item> 12:00 PM</item>
        <item> 12:30 PM</item>
        <item> 01:00 PM</item>
        <item> 01:30 PM</item>
        <item> 02:00 PM</item>
        <item> 02:30 PM</item>
        <item> 03:00 PM</item>
        <item> 03:30 PM</item>
        <item> 04:00 PM</item>
        <item> 04:30 PM</item>
        <item>  05:00 PM</item>
        <item> 05:30 PM</item>
        <item> 06:00 PM</item>
        <item> 06:30 PM</item>
        <item> 07:00 PM</item>
        <item> 07:30 PM</item>
        <item>08:00 PM</item>
        <item>08:30 PM</item>
        <item>09:00 PM</item>
        <item>09:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item> 11:00 PM</item>
        <item> 11:30 PM</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_your_availability">Please enable you availability</string>
    <string name="select_eligibility_radius">Please select eligibility radius</string>
    <string name="choose_availability_location">Please choose availability location</string>
    <string name="schedule_availability">Schedule Availability</string>
    <string name="my_availability_schedule_">My Availability Schedule</string>
    <string name="support_amp_more">Support &amp; More</string>
    <string name="best_company_for_medical_home_healthcare">The Best Company\nfor Medical Services\n &amp; Home Healthcare</string>
    <string name="language_preference">Language Preference</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_rootscare">About Rootscare</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="need_support">Need Support?</string>
    <string name="review_amp_rating">Review &amp; Rating</string>
    <string name="transaction_history">Transaction History</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="account_amp_more">Account &amp; More</string>
    <string name="logout">Logout</string>
    <string name="setup_your_calendar_day_amp_more">Setup your calendar, day &amp; more</string>
    <string name="setup_service_charges">Setup service charges</string>
    <string name="pending_upcoming_ongoing_n_amp_past">Pending, Upcoming, Ongoing\n&amp; Past</string>
    <string name="appointment_amp_schedules">Appointment &amp; Schedules</string>
    <string name="transactions_amp_accounting">Transactions &amp; Accounting</string>
    <string name="account_settings">Account Settings</string>
    <string name="select_user_type">Select User Type</string>
    <string name="select_provider_type">Select Provider Type</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="continue_">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="did_not_recev_email">Didn\'t received email?</string>
    <string name="not_receivd_code">Not received code?</string>
    <string name="cant_login_help">Can\'t Login, Need help?</string>
    <string name="swipe_right_to_left">Swipe right to left</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="accept_booking">Accept Booking</string>
    <string name="hide_booking">Hide Booking</string>
    <string name="add_availability_schedule">Add availability schedule</string>
    <string name="this_refers_to_your_available_time_slot">This refers to your available time slot for patients/users to book you for their appointments.</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="point_your_availability_for_appointment">Point your availability for Appointment</string>
    <string name="_30_min_slots">30 Min Slots</string>
    <string name="_2_4_6_8_12_hours">2,4,6,8,12 Hours</string>
    <string name="booking_preferences">Booking Preferences</string>
    <string name="add_service_radius">Add Service Radius</string>
    <string name="set_the_kilometre_distance_radius_for_your_service_where_you_prefer_to_provide_service_and_not_outside">Set the kilometre distance Radius for your service. Where you prefer to provide service and not outside</string>
    <string name="enter_address">Enter address</string>
    <string name="point_your_service_location">Point Your Service Location</string>
    <string name="sign_up">Sign up</string>
    <string name="register_to_open_your_account">Register to open your Account</string>
    <string name="sent_code_subtext">We have sent the verification code to your email</string>
    <string name="create_new_pwd_subtext">Your new password must be different from previous used passwords.</string>
    <string name="forgot_password_subtext">Enter the email associated with your account and we\'ll send an email with instruction to reset your password.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="must_be_at_least_8_characters">Must be at least 8 characters.</string>
    <string name="must_be_at_least_11_characters">Must be at least 8 characters.</string>
    <string name="not_more_than_11_characters">Please type minimum 8 or 11 digits Health registration ID</string>
    <string name="id_number_must_be_10">Must be between 10 to 15 characters or digits</string>
    <string name="id_must_start_from_1_or_2">ID Number must be start from 1 or 2</string>
    <string name="id_must_start_from_7">Id number must start with 7</string>
    <string name="both_password_must_matched">Both passwords must match.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="identity_number">Identity Number</string>
    <string name="provide_id_number">Provide ID Number</string>
    <string name="upload_photocopy_of_id">Upload Photocopy of ID</string>
    <string name="no_attachment">No Attachment</string>
    <string name="experience_certificates">Experience &amp; Certificates</string>
    <string name="highest_qualification">Highest Qualification</string>
    <string name="qualification">Qualification</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="year_of_experiences">Years of Experience</string>
    <string name="year_of_establish">Year of Establishment</string>
    <string name="speciality_experience_amp_certificates">Speciality, Experience &amp; Certificates</string>
    <string name="speciality">Speciality</string>
    <string name="scfhs_registration_id">Health Registration ID</string>
    <string name="moh_licence">MOH Licence</string>
    <string name="moh_licence_number">MOH Licence Number</string>
    <string name="company_registration_certificate">Company Registration Certificate</string>
    <string name="registration_number">Registration Number</string>
    <string name="select_a_topic">Select a Topic:</string>
    <string name="select_a_day">Select Day</string>
    <string name="write_your_issue_in_details_here">Write your issue in details here.</string>
    <string name="upload_document">Upload Document</string>
    <string name="send_again">Send Again</string>
    <string name="registered_email">Registered Email</string>
    <string name="open_email_check_inbox_or_spam">Open your email app, check inbox or spam.</string>
    <string name="select">Select</string>
</resources>