<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="32dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvh_department"
        style="@style/AppTheme.TextMedium"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingVertical="@dimen/dp5"
        android:text="@string/year_of_establish"
        android:textColor="@color/txt_dash_heading"
        android:textSize="@dimen/dp16" />

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvh_department"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberPicker1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/numberPicker1"
        android:text="@string/select" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/numberPicker1"
        android:text="@string/cancel" />

</RelativeLayout>