<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_4sdp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvh_idn_ner"
            style="@style/AppTheme.TextMedium"
            android:drawablePadding="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/identity_number"
            android:textColor="@color/txt_dash_heading"
            android:textSize="@dimen/dp15"
            app:drawableEndCompat="@drawable/ic_round_info_24" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="10"
            android:layout_marginTop="@dimen/dp4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_bc_identity_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/provide_id_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="15"
                android:textColor="@color/txt_dash_heading"
                android:textSize="@dimen/dp15" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                android:id="@+id/tvh_bc_upload_photocopy"
                style="@style/AppTheme.TextMedium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/upload_photocopy_of_id"
                android:textColor="@color/indicator_color"
                android:textSize="@dimen/dp14" />

            <TextView
                android:id="@+id/tv_bc_na_id"
                style="@style/AppTheme.TextRegular"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/no_attachment"
                android:textColor="@color/colorTxtGrey1"
                android:textSize="@dimen/dp14" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvh_exp_and_certificates"
            style="@style/AppTheme.TextMedium"
            android:layout_marginTop="@dimen/dp16"
            android:drawablePadding="@dimen/dp10"
            android:gravity="center_vertical"
            android:text="@string/experience_certificates"
            android:textColor="@color/txt_dash_heading"
            android:textSize="@dimen/dp15"
            app:drawableEndCompat="@drawable/ic_round_info_24" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_highest_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/highest_qualification"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/txt_dash_heading"
                android:textSize="@dimen/dp15" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp">

            <TextView
                android:id="@+id/tvh_bc_upload_certificate"
                style="@style/AppTheme.TextMedium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/upload_certificate"
                android:textColor="@color/indicator_color"
                android:textSize="@dimen/dp14" />

            <TextView
                android:id="@+id/tv_bc_attachement_quali"
                style="@style/AppTheme.TextRegular"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/no_attachment"
                android:textColor="@color/colorTxtGrey1"
                android:textSize="@dimen/dp14" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_expe_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/year_of_experiences"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/txt_dash_heading"
                android:textSize="@dimen/dp15" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</layout>